--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -21,6 +21,10 @@ pipeline {
                     if (currentBuild.resultIsBetterOrEqualTo('SUCCESS')) {
                         // Ejecuta el comando 'dotnet build' en el Paso B
                         echo "aqui tendra que ir el docker compose?"
+                        sh '''
+                            docker docker-compose --version
+                            docker docker-compose up
+                            '''
                     } else {
                         currentBuild.result = 'FAILURE'
                         error('Paso A falló, por lo que Paso B se omite.')
