--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -21,10 +21,8 @@ pipeline {
                     if (currentBuild.resultIsBetterOrEqualTo('SUCCESS')) {
                         // Ejecuta el comando 'dotnet build' en el Paso B
                         echo "aqui tendra que ir el docker compose?"
-                        sh '''
-                            docker compose version
-                            docker-compose -f docker-compose.yml logs 
-                            '''
+                        sh 'pwd'
+                        //sh ''' docker compose version docker-compose -f docker-compose.yml logs '''
                     } else {
                         currentBuild.result = 'FAILURE'
                         error('Paso A falló, por lo que Paso B se omite.')
