--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -22,6 +22,7 @@ pipeline {
                         // Ejecuta el comando 'dotnet build' en el Paso B
                         echo "aqui tendra que ir el docker compose?"
                         sh 'pwd'
+                        sh 'find . -type d'
                         //sh ''' docker compose version docker-compose -f docker-compose.yml logs '''
                     } else {
                         currentBuild.result = 'FAILURE'
