--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -22,8 +22,8 @@ pipeline {
                         // Ejecuta el comando 'dotnet build' en el Paso B
                         echo "aqui tendra que ir el docker compose?"
                         sh 'pwd'
-                        sh 'ls -R'
-                        //sh ''' docker compose version docker-compose -f docker-compose.yml logs '''
+                        //sh 'ls -R'
+                        sh ''' docker compose version docker-compose -f we-working-api/docker-compose.yml logs '''
                     } else {
                         currentBuild.result = 'FAILURE'
                         error('Paso A falló, por lo que Paso B se omite.')
