--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                         //sh 'ls -R'
                         sh ''' 
                         docker compose version  
-                        docker-compose -f we-working-api/docker-compose.yml logs
+                        docker compose we-working-api/docker-compose.yml
                         '''
                     } else {
                         currentBuild.result = 'FAILURE'
