--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -23,9 +23,15 @@ pipeline {
                         echo "aqui tendra que ir el docker compose?"
                         sh 'pwd'
                         //sh 'ls -R'
-                        sh ''' 
-                        docker compose we-working-api/docker-compose.yml
-                        '''
+                        dir('we-working-api') {
+                            //sh 'pwd'  // Opcional: mostrar el directorio actual después del cambio
+                            sh 'ls -R'
+                            // Cambiar al directorio 'we-working-api' dentro de 'we-working-api'
+                            dir('we-working-api') {
+                                //sh 'pwd'  // Opcional: mostrar el directorio actual después del cambio
+                                sh 'ls -R'
+                            }
+                        }
                     } else {
                         currentBuild.result = 'FAILURE'
                         error('Paso A falló, por lo que Paso B se omite.')
