--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                         dir('we-working-api') {
                             //sh 'pwd'  // Opcional: mostrar el directorio actual después del cambio
                             sh 'ls -R'
-                            sh 'docker-compose up'
+                            sh 'docker-compose up -d'
                         }
                     } else {
                         currentBuild.result = 'FAILURE'
