--- a/we-working-api/Jenkinsfile
+++ b/we-working-api/Jenkinsfile
@@ -26,7 +26,10 @@ pipeline {
                         dir('we-working-api') {
                             //sh 'pwd'  // Opcional: mostrar el directorio actual después del cambio
                             sh 'ls -R'
-                            sh 'docker-compose up -d'
+                            // Establecer la variable de entorno DOCKER_HOST para usar el socket Unix
+                            withEnv(["DOCKER_HOST=unix:///home/sergio/.docker/desktop/docker.sock"]) {
+                                sh 'docker-compose up -d'
+                            }
                         }
                     } else {
                         currentBuild.result = 'FAILURE'
